Fixed overflow issues in mobile view

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -141,3 +141,15 @@
     }
   }
 }
+
+@media screen and (max-width: 435px) {
+  .header {
+    &__file-icon {
+      display: none;
+    }
+
+    &__left-content {
+      max-width: 75%;
+    }
+  }
+}
